--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ a:focus {
 .sub_page .hero_area {
   min-height: auto;
   /* background: linear-gradient(130deg, #231a6f, #0f054c); */
-  background-color: #363636;
+  background-color: #d3d3d3;
 }
 
 .sub_page .hero_area .hero_bg_box {
